Bug 166674 - [25.8] When you create or edit a formula, "Name box" will remain switched to "Last Used Functions list"
Summary: [25.8] When you create or edit a formula, "Name box" will remain switched to ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Padia Rashesh
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-05-21 15:06 UTC by nobu
Modified: 2025-08-28 10:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot with 25.8 (25.65 KB, image/png)
2025-05-21 21:42 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-05-21 15:06:49 UTC
Description:
When you create or edit a formula, "Name box" will remain switched to "Last Used Functions list".

Steps to Reproduce:
1. Open new calc.
2. Insert "=1" in Cell [A1].
3. The "Name box" switches to the "Last Used Functions list".
4. Select Cell [A2].

Actual Results:
5. "Name box" is still "Last Used Functions list".

Expected Results:
5. The "Name box" returns to its normal display.
   If a named range is defined, it is displayed.


Reproducible: Always


User Profile Reset: No

Additional Info:

If you define a new named range, the "Name box" returns to the normal display, but if you edit the formula, the "Name box" remains in the "Last Used Functions list".

Not reproducible with
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible with
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6190fe56f72008e0b6d0e502bf94099e72b9d202
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 m_a_riosv 2025-05-21 21:42:46 UTC
Created attachment 200902 [details]
Screenshot with 25.8

Reproducible
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6190fe56f72008e0b6d0e502bf94099e72b9d202
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Saburo 2025-05-22 09:52:04 UTC
Bisected with linux-64-25.8
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a8bffc1c6a9296294625e75e3ddfb42931d91586
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

author	Rashesh
commit a8bffc1c6a9296294625e75e3ddfb42931d91586

sc: fix: unnecessary updates to ScPosWnd when named range are empty
- follow up 115776004c875b3a8a861d070129187c893b136a

Change-Id: I57072d1999e703975a43dc50077698d4b28df461
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175869
Comment 3 Padia Rashesh 2025-05-25 07:46:32 UTC
Thank your for the report. Let me check :)
Comment 4 Padia Rashesh 2025-05-25 09:10:50 UTC
Fix https://gerrit.libreoffice.org/c/core/+/185747
Comment 5 Commit Notification 2025-05-26 12:02:56 UTC
Rashesh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2167fa8aa5592e04a929cde2cd86a07bad49efde

tdf#166674: sc: fix "Name box" remain switched to "Last Used Function List"

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2025-08-28 04:32:29 UTC
nobu, m_a_riosv, Rashesh is this bug solved?
Comment 7 nobu 2025-08-28 10:23:57 UTC
(In reply to BogdanB from comment #6)
> nobu, m_a_riosv, Rashesh is this bug solved?

Yes.