tdf#166674: sc: fix "Name box" remain switched to "Last Used Function List"

Change-Id: I68f46ec54c9a2b6cdaa04b27d02f3c01ebd4f2b4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185747
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 86579c2f816e8b77c75c17f25bda47a2312f23da)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185776
Tested-by: Jenkins